--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/13.0.1/markdown-it.min.js"></script>
     <script>
         const pages = [
-            { path: 'README.md', title: 'Index' },
+            { path: 'INDEX.md', title: 'Index' },
             { path: 'Ch-1-The-Mystery-Of-Executable-Size/Why is my "Hello World" so Big?.md', title: 'Chapter 1: Why is my "Hello World" so Big?' },
             { path: 'Ch-2-The-Executable-And-Linkable-Format/Demystifying-the-Executable-Format.md', title: 'Chapter 2: Demystifying the Executable Format' },
             { path: 'Ch-3-Sections-Organizing-Code-And-Data/Understanding-ELF-Sections.md', title: 'Chapter 3: Understanding ELF Sections' },
