--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <script>
         const pages = [
             { path: 'INDEX.md', title: 'Index' },
-            { path: 'Ch-1-The-Mystery-Of-Executable-Size/Why is my "Hello World" so Big?.md', title: 'Chapter 1: Why is my "Hello World" so Big?' },
+            { path: 'Ch-1-The-Mystery-Of-Executable-Size/Why-is-my-Hello-World-so-Big.md', title: 'Chapter 1: Why is my "Hello World" so Big?' },
             { path: 'Ch-2-The-Executable-And-Linkable-Format/Demystifying-the-Executable-Format.md', title: 'Chapter 2: Demystifying the Executable Format' },
             { path: 'Ch-3-Sections-Organizing-Code-And-Data/Understanding-ELF-Sections.md', title: 'Chapter 3: Understanding ELF Sections' },
             { path: 'Ch-4-Global-Variables-And-Initialization/The-Secret-Life-of-Global-Variables-in-C.md', title: 'Chapter 4: The Secret Life of Global Variables in C' },
