--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             --link-color: #0366d6;
             --nav-bg: #f6f8fa;
             --border-color: #e1e4e8;
+            --code-bg: #f6f8fa;
+            --code-text: #24292e;
         }
 
         [data-theme="dark"] {
@@ -20,6 +22,8 @@
             --link-color: #58a6ff;
             --nav-bg: #161b22;
             --border-color: #30363d;
+            --code-bg: #1f2428;
+            --code-text: #e1e4e8;
         }
 
         body {
@@ -64,6 +68,17 @@
             cursor: pointer;
             padding: 8px;
             color: var(--text-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            transition: background-color 0.3s;
+        }
+
+        .theme-toggle:hover {
+            background-color: var(--border-color);
         }
 
         .nav-button {
@@ -89,8 +104,18 @@
         }
 
         .markdown-body {
-            background-color: var(--bg-color);
-            color: var(--text-color);
+            background-color: var(--bg-color) !important;
+            color: var(--text-color) !important;
+        }
+
+        .markdown-body pre {
+            background-color: var(--code-bg) !important;
+            border: 1px solid var(--border-color);
+        }
+
+        .markdown-body code {
+            color: var(--code-text) !important;
+            background-color: var(--code-bg) !important;
         }
 
         .markdown-body a {
@@ -129,9 +154,8 @@
         <span class="nav-title">Under The Hood Of Executables</span>
         <div class="controls">
             <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
-                <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
-                    <circle cx="10" cy="10" r="4"/>
-                    <path d="M10,0 L10,2 M10,18 L10,20 M0,10 L2,10 M18,10 L20,10 M2.93,2.93 L4.34,4.34 M15.66,15.66 L17.07,17.07 M2.93,17.07 L4.34,15.66 M15.66,4.34 L17.07,2.93"></path>
+                <svg id="themeIcon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <!-- Will be updated by JavaScript -->
                 </svg>
             </button>
             <div class="nav-group">
@@ -165,16 +189,26 @@
         let currentPageIndex = 0;
         const md = window.markdownit();
         const themeToggle = document.getElementById('themeToggle');
+        const themeIcon = document.getElementById('themeIcon');
         const prevButton = document.getElementById('prevButton');
         const nextButton = document.getElementById('nextButton');
         const content = document.getElementById('content');
         const prevTitle = document.getElementById('prevTitle');
         const nextTitle = document.getElementById('nextTitle');
 
+        // Theme icons
+        const sunIcon = `
+            <path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42M12 17.5a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11z"/>
+        `;
+        const moonIcon = `
+            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
+        `;
+
         // Theme handling
         function setTheme(theme) {
             document.documentElement.setAttribute('data-theme', theme);
             localStorage.setItem('theme', theme);
+            themeIcon.innerHTML = theme === 'dark' ? sunIcon : moonIcon;
         }
 
         themeToggle.addEventListener('click', () => {
